refactor: resolve sonar issues and standardize exception handling